# code-sense

./: .env.local.example  .gitignore  NEO4J_UTIL.md  README.md  all_dependencies.json  docker-compose.yml  main.py  mappings.json  pyproject.toml  test_parse_deps.py
app/: attention_integration.py  chat_service.py  class_test_data.py  config.py  db.py  executor.py  llm.py  llm_grok.py  main.py  mental_model.py  parse_dependencies.py  planner.py  planner_three.py  planner_two.py  repo_arch_service.py  repo_arch_service_me.py  repo_context_builder.py  retriever.py  retriever_four.py  reverse_eng_service.py  router.py  service.py  synthesizer.py  utils.py  walkthrough_def_service.py  walkthrough_service.py
app/lsp_reference_resolver/: INSTALL_LANG_SERVER.md  run.py
app/lsp_reference_resolver/core/: base_analyser.py  cache.py  lsp_client.py
app/lsp_reference_resolver/languages/: java_analyser.py  python_analyser.py  rust_analyser.py  scala_analyser.py
app/models/: data_model.py
app/prompts/: system_prompts.py
app/repo_ingestion_pipeline/: __init__.py  code_reader.py  create_repo_graph.py  mental_model_gen.py  pre_ingestion_analysis.py  record_gen.py  resolve_references.py
app/repo_ingestion_pipeline/core/: base.py  pipeline.py
app/tools/: __init__.py  fetch_brief_file_summary.py  fetch_code_file.py  fetch_code_for_def.py  fetch_cross_file_refs_for_file.py  fetch_entry_point_files.py  list_files_in_dir.py  lookup_def_usages.py  lookup_refs_for_def.py
scripts/: bootstrap_local.sh  install_language_servers.sh
