[project]
name = "code-repo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "attentiondb",
    "fastapi>=0.116.1",
    "groq>=0.30.0",
    "loguru>=0.7.3",
    "neo4j>=5.28.2",
    "pydantic>=2.11.7",
    "pymongo==4.13.0",
    "python-dotenv>=1.1.1",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
attentiondb = { path = "../attentiondb", editable = true }
